--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "^2.0.1",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.20",
